--- a/css/business-frontpage.css
+++ b/css/business-frontpage.css
@@ -247,6 +247,11 @@ nav, footer{
     bottom: 0;
     width:100%;
 }
+@media only screen and (max-width: 768px) {
+    #footersale{
+        position: static;
+    }
+}
 #contact{
     color:white;
     text-align: center;
